Checkout UX: Fix missing border

--- a/src/pretix/static/pretixpresale/scss/_forms.scss
+++ b/src/pretix/static/pretixpresale/scss/_forms.scss
@@ -56,7 +56,6 @@
 .panel-default>.accordion-radio>.panel-heading {
   color: #333;
   background-color: #f5f5f5;
-  border-color: #ddd;
   padding: 12px 15px;
 
   input[type=radio] {
@@ -65,4 +64,7 @@
     position: relative;
     top: 2px;
   }
+}
+.panel-default>.accordion-radio+.panel-collapse>.panel-body {
+  border-top: 1px solid #ddd;
 }
